--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <canvas id="myCanvas"></canvas>
+  <canvas id="carCanvas"></canvas>
+  <div id="buttons">
+    <button onclick="save()">Save</button>
+    <button onclick="discard()">Discard</button>
+  </div>
+  <canvas id="networkCanvas"></canvas>
   <script src="network.js"></script>
   <script src="sensor.js"></script>
   <script src="utils.js"></script>
   <script src="road.js"></script>
   <script src="controls.js"></script>
   <script src="car.js"></script>
+  <script src="visualizer.js"></script>
   <script src="main.js"></script>
 </body>
